--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
 </head>
 <body>
-    <div>
+    <div class="top-head">
         <span>Inxus的小金库</span>
         <i class="fas fa-plus-circle" style="float:right" onclick="$('.new-chart').fadeIn()"></i>
     </div>
