--- a/index.html
+++ b/index.html
@@ -11,39 +11,44 @@
 </head>
 <body>
     <div class="top-head">
-        <span>Inxus的小金库</span>
+        <span>MINI BANK</span>
+        <span>+</span>
         <i class="fas fa-plus-circle" style="float:right" onclick="$('.new-chart').fadeIn()"></i>
     </div>
 
-    <hr>
-
     <div class="money">
         <div class="total-money available-cash">
-            <h5>可用现金</h5>
-            <p>0</p>
+            <div>
+                <h5>可用现金</h5>
+                <p>0</p>
+            </div>
         </div>
         <div class="total-money have-cash">
-            <h5>拥有现金</h5>
-            <p>0</p>
+            <div>
+                <h5>拥有现金</h5>
+                <p>0</p>
+            </div>
         </div>
         <div class="total-money liability">
-            <h5>负债</h5>
-            <p>0</p>
+            <div>
+                <h5>负债</h5>
+                <p>0</p>
+            </div>
         </div>
         <div class="total-money should-returned">
-            <h5>下期应还</h5>
-            <p>0</p>
+            <div>
+                <h5>下期应还</h5>
+                <p>0</p>
+            </div>
         </div>
     </div>
-    
-    <hr>
 
     <div class="assets">
-        <h1>资产类</h1>
+        <h1>真实资本</h1>
     </div>
 
     <div class="credit">
-        <h1>信用类</h1>
+        <h1>信用资本</h1>
     </div>
     
     <div class="new-chart" style="display:none">
