--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="top-head">
         <span>MINI BANK</span>
-        <span>+</span>
-        <i class="fas fa-plus-circle" style="float:right" onclick="$('.new-chart').fadeIn()"></i>
+        <span class="add-chart" onclick="$('.new-chart').fadeIn()">+</span>
+        <!-- <i class="fas fa-plus-circle" style="float:right" ></i> -->
     </div>
 
     <div class="money">
