1、剩下删除与修改

--- a/index.html
+++ b/index.html
@@ -52,13 +52,8 @@
     </div>
     
     <div class="new-chart">
-        <input type="radio" name="item-choose" value="0" id="trueMoney" checked><label for="trueMoney">真实资本</label>
+        <input type="radio" name="item-choose" value="0" id="trueMoney" checked><label class="moneyLabel" for="trueMoney">真实资本</label>
         <input type="radio" name="item-choose" value="1" id="creditMoney"><label for="creditMoney">信用资本</label> 
-        <!-- <select name="" id="item-choose">
-            <option value ="404" style="display:none"></option>
-            <option value ="0">资产类</option>
-            <option value ="1">信用类</option>
-        </select> -->
         <div class="chart-ctn">
             <div class="item-ctn">
                 <input type="text" placeholder="NAME" class="assets-name">
