--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
     </div>
 
     <script src="./assets/jquery/jquery-3.3.1.min.js"></script>
-    <script src="./js/control.js"></script>
+    <script src="./js/control.js?v0.1"></script>
 </body>
 </html>
