--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Inxus的小金库</title>
-    <link rel="stylesheet" href="./css/style.css?v0.2">
+    <title>MINI BANK</title>
+    <link rel="stylesheet" href="./css/style.css?v0.4">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
 </head>
 <body>
     <div class="top-head">
-        <span>MINI BANK</span>
+        <input class="bank-name" type="text" value="Bank Name">
+        <!-- <span class="bank-name">MINI BANK</span> -->
         <span class="add-chart" onclick="$('.new-chart').fadeIn()">+</span>
         <!-- <i class="fas fa-plus-circle" style="float:right" ></i> -->
     </div>
@@ -73,6 +74,6 @@
     </div>
 
     <script src="./assets/jquery/jquery-3.3.1.min.js"></script>
-    <script src="./js/control.js?v0.1"></script>
+    <script src="./js/control.js?v0.3"></script>
 </body>
 </html>
