--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div class="clear-data" style="display:none;position:fixed;top:100px;left:30px;">
         <button class="cancel-clear-data" onclick="$('.clear-data').fadeOut()">取消</button>
-        <button class="confirm-clear-data" onclick="localStorage.treasuryData = undefined">清除数据</button>
+        <button class="confirm-clear-data" onclick="localStorage.treasuryData = ''">清除数据</button>
     </div>
 
     <script src="./assets/jquery/jquery-3.3.1.min.js"></script>
