--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MINI BANK</title>
-    <link rel="stylesheet" href="./css/style.css?v1.0">
+    <link rel="stylesheet" href="./css/style.css?v1.5">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
 </head>
@@ -13,7 +13,7 @@
     <div class="top-head">
         <input class="bank-name" type="text" value="Bank Name">
         <!-- <span class="bank-name">MINI BANK</span> -->
-        <span class="add-chart" onclick="$('.new-chart').fadeIn()">+</span>
+        <!-- <span class="add-chart" onclick="$('.new-chart').fadeIn()">+</span> -->
         <!-- <i class="fas fa-plus-circle" style="float:right" ></i> -->
     </div>
 
@@ -45,11 +45,17 @@
     </div>
 
     <div class="assets">
-        <h1>真实资本</h1>
+        <div>
+            <h1>真实资本</h1>
+            <span class="add-chart" onclick="$('.new-chart').fadeIn()">+</span>
+        </div>  
     </div>
 
     <div class="credit">
-        <h1>信用资本</h1>
+        <div>
+            <h1>信用资本</h1>
+            <span class="add-chart" onclick="$('.new-chart').fadeIn()">+</span>
+        </div>
     </div>
     
     <div class="new-chart">
@@ -71,6 +77,7 @@
     <div class="chart-action">
         <button class="cancel-chart-action" onclick="$('.chart-action').fadeOut()">取&nbsp;&nbsp;消</button>
         <button class="delete-chart">删&nbsp;&nbsp;除</button>
+        <button class="update-chart">修&nbsp;&nbsp;改</button>
     </div>
 
     <div class="clear-data" style="display:none;position:fixed;top:100px;left:30px;">
@@ -79,6 +86,6 @@
     </div>
 
     <script src="./assets/jquery/jquery-3.3.1.min.js"></script>
-    <script src="./js/control.js?v1.1"></script>
+    <script src="./js/control.js?v1.5"></script>
 </body>
 </html>
