--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MINI BANK</title>
-    <link rel="stylesheet" href="./css/style.css?v2.2">
+    <link rel="stylesheet" href="./css/style.css?v2.3">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
 </head>
 <body>
     <div class="top-head">
         <input class="bank-name" type="text" value="Bank Name">
+        <i class="fas fa-trash show-clear" onclick="$('.clear-data').fadeToggle()"></i>
         <!-- <span class="bank-name">MINI BANK</span> -->
         <!-- <span class="add-chart" onclick="$('.new-chart').fadeIn()">+</span> -->
         <!-- <i class="fas fa-plus-circle" style="float:right" ></i> -->
@@ -20,13 +21,13 @@
     <div class="money">
         <div class="total-money available-cash">
             <div>
-                <h5>可用现金</h5>
+                <h5>可用资金</h5>
                 <p>0</p>
             </div>
         </div>
         <div class="total-money have-cash">
             <div>
-                <h5>拥有现金</h5>
+                <h5>拥有资金</h5>
                 <p>0</p>
             </div>
         </div>
@@ -74,7 +75,7 @@
                 <input type="text" placeholder="NAME" class="credit-name">
                 <input type="number" placeholder="额度/剩余额度" class="credit-val">
                 <input type="number" placeholder="待还金额" class="wait-val">
-                <input type="number" placeholder="出帐待还" class="already-val">
+                <input type="number" placeholder="出账待还" class="already-val">
                 <input type="number" placeholder="剩余期数" class="left-time">
             </div>
             <div class="chart-ctn-btn-group">
@@ -109,13 +110,13 @@
         <button class="cancel-clear-data" onclick="$('.clear-data').fadeOut()">取消</button>
         <button class="confirm-clear-data" onclick="localStorage.treasuryData = ''">清除数据</button>
     </div> -->
-    <i class="fas fa-trash show-clear" onclick="$('.clear-data').fadeToggle()"></i>
+    
     <div class="clear-data">
         <button class="cancel-clear-data" onclick="$('.clear-data').fadeOut()">取消</button>
         <button class="confirm-clear-data" onclick="clearData()">清除数据</button>
     </div>
 
     <script src="./assets/jquery/jquery-3.3.1.min.js"></script>
-    <script src="./js/control.js?v2.2"></script>
+    <script src="./js/control.js?v2.3"></script>
 </body>
 </html>
